--- a/.sepaemuipipeline/sepaemui.yml
+++ b/.sepaemuipipeline/sepaemui.yml
@@ -14,7 +14,12 @@ steps:
     
     echo "Adding GitHub remote"
     git remote add github https://$(GITHUB_PAT)@github.com:marsdensoftware/sep-aem-ui.git
-    git push github $(Build.SourceBranchName):$(Build.SourceBranchName) --force
+    # Fetch the latest changes from both origin and github remotes
+    #git fetch origin
+    git fetch github
+    # Checkout the current branch being built
+    #git checkout $(Build.SourceBranchName)
+    #git push github $(Build.SourceBranchName):$(Build.SourceBranchName) --force
 
   displayName: 'Push Code to GitHub'
   env:
