Update sepaemui.yml for Azure Pipelines

--- a/.sepaemuipipeline/sepaemui.yml
+++ b/.sepaemuipipeline/sepaemui.yml
@@ -14,6 +14,7 @@ steps:
     
     echo "Adding GitHub remote"
     git remote add github https://$(GITHUB_PAT)@github.com/marsdensoftware/sep-aem-ui
+    echo "GitHub remote success"
     # Fetch the latest changes from both origin and github remotes
     #git fetch origin
     git fetch github
@@ -22,5 +23,5 @@ steps:
     #git push github $(Build.SourceBranchName):$(Build.SourceBranchName) --force
 
   displayName: 'Push Code to GitHub'
-  env:
-    GITHUB_SSH_PRIVATE_KEY: $(GITHUB_SSH_PRIVATE_KEY)
+  #env:
+    #GITHUB_SSH_PRIVATE_KEY: $(GITHUB_SSH_PRIVATE_KEY)
