Update sepaemui.yml for Azure Pipelines

--- a/.sepaemuipipeline/sepaemui.yml
+++ b/.sepaemuipipeline/sepaemui.yml
@@ -19,7 +19,7 @@ steps:
     #git fetch origin
     git fetch github
     # Checkout the current branch being built
-    #git checkout $(Build.SourceBranchName)
+    git checkout $(Build.SourceBranchName)
     git push github $(Build.SourceBranchName):$(Build.SourceBranchName) --force
 
   displayName: 'Push Code to GitHub'
