--- a/.sepaemuipipeline/sepaemui.yml
+++ b/.sepaemuipipeline/sepaemui.yml
@@ -16,8 +16,8 @@ steps:
     git remote add github https://$(GITHUB_PAT)@github.com/gregwilk/ADO-SEP-UI-LEARNING
     echo "GitHub remote success"
     # Fetch the latest changes from both origin and github remotes
-    #git fetch origin
-    git fetch github
+    git fetch origin
+    #git fetch github
     # Checkout the current branch being built
     git checkout $(Build.SourceBranchName)
     git push github $(Build.SourceBranchName):$(Build.SourceBranchName) --force
