--- a/.sepaemuipipeline/sepaemui.yml
+++ b/.sepaemuipipeline/sepaemui.yml
@@ -12,10 +12,10 @@ steps:
 
 - script: |
     
-    echo "Source branch (raw): $(Build.SourceBranchName)"
+    echo "Source branch (raw): $(Build.SourceBranch)"
     
     # Strip 'refs/heads/' to get the clean branch name
-    BRANCH_NAME=$(echo "$(Build.SourceBranchName)" | sed 's#refs/heads/##')
+    BRANCH_NAME=$(echo "$(Build.SourceBranch)" | sed 's#refs/heads/##')
 
     echo "Cleaned branch name: $BRANCH_NAME"
     
