--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@adobe/json-formula": "0.1.50",
     "@aemforms/af-core": "0.22.121",
     "@aemforms/af-formatters": "0.22.121",
-    "@aemforms/af-custom-functions": "1.0.14"
+    "@aemforms/af-custom-functions": "1.0.14",
     "@babel/eslint-parser": "7.25.9",
     "eslint": "8.57.1",
     "eslint-config-airbnb-base": "15.0.0",
@@ -81,7 +81,7 @@
     "rollup": "^2.79.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-license": "^3.0.1",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "mocha": {
     "spec": "test/**/*.test.js",
