--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "update:core": "rollup -c rollup/af-core.rollup.config.js",
     "update:formatters": "rollup -c rollup/af-formatters.rollup.config.js",
     "update:functions": "cp node_modules/@aemforms/af-custom-functions/src/index.js blocks/form/rules/functions.js",
-    "update": "npm run update:core && npm run update:formula && npm run update:formatters"
+    "update": "npm run update:core && npm run update:formula && npm run update:formatters",
+    "watch:ts": "tsc --watch",
+    "gulp": "gulp",
+    "dev": "concurrently --kill-others \"aem up\" \"npm run watch:ts\" \"npm run gulp\""
   },
   "c8": {
     "exclude": [
@@ -46,6 +49,7 @@
   },
   "homepage": "https://github.com/adobe/aem-boilerplate#readme",
   "devDependencies": {
+    "@adobe/aem-cli": "^16.10.19",
     "@adobe/json-formula": "0.1.50",
     "@aemforms/af-core": "0.22.121",
     "@aemforms/af-custom-functions": "1.0.14",
@@ -53,9 +57,16 @@
     "@babel/eslint-parser": "7.25.9",
     "@testing-library/dom": "9.3.4",
     "@testing-library/user-event": "14.3.0",
-    "@types/node": "20.12.7",
+    "@types/gulp": "^4.0.17",
+    "@types/gulp-postcss": "^8.0.6",
+    "@types/gulp-sass": "^5.0.4",
+    "@types/node": "^20.12.7",
+    "@types/postcss-pxtorem": "^6.1.0",
+    "@typescript-eslint/parser": "^8.31.0",
+    "autoprefixer": "^10.4.21",
     "c8": "9.0.0",
     "chai": "5.1.0",
+    "concurrently": "^9.1.2",
     "dom-compare": "0.6.0",
     "eslint": "8.57.1",
     "eslint-config-airbnb-base": "15.0.0",
@@ -63,10 +74,12 @@
     "eslint-plugin-json": "3.1.0",
     "eslint-plugin-xwalk": "github:adobe-rnd/eslint-plugin-xwalk#v0.1.3",
     "fs-extra": "11.2.0",
+    "gulp": "^5.0.0",
+    "gulp-postcss": "^10.0.0",
+    "gulp-sass": "^6.0.1",
     "husky": "9.1.1",
     "jsdom": "24.0.0",
     "jsdom-global": "3.0.2",
-    "live-server": "^1.2.2",
     "merge-json-cli": "1.0.4",
     "mocha": "10.2.0",
     "mutationobserver-shim": "0.3.7",
@@ -75,17 +88,27 @@
     "npm-run-all": "4.1.5",
     "nyc": "^15.1.0",
     "parse-multipart-data": "^1.5.0",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
+    "postcss-pxtorem": "^6.1.0",
     "rollup": "^2.79.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-license": "^3.0.1",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.87.0",
     "sinon": "^17.0.1",
     "stylelint": "16.12.0",
-    "stylelint-config-standard": "36.0.1"
+    "stylelint-config-standard": "36.0.1",
+    "typescript": "^5.8.3"
   },
   "mocha": {
     "spec": "test/**/*.test.js",
     "require": "test/unit/setup-env.js",
     "recursive": "true"
-  }
+  },
+  "browserslist": [
+    "last 5 versions",
+    "> 1%",
+    "not dead"
+  ]
 }
