--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@aemforms/af-custom-functions": "1.0.14",
     "@aemforms/af-formatters": "0.22.121",
     "@babel/eslint-parser": "7.25.9",
+    "@csstools/postcss-minify": "^2.0.3",
     "@testing-library/dom": "9.3.4",
     "@testing-library/user-event": "14.3.0",
     "@types/gulp": "^4.0.17",
