--- a/package.json
+++ b/package.json
@@ -48,9 +48,16 @@
   "devDependencies": {
     "@adobe/json-formula": "0.1.50",
     "@aemforms/af-core": "0.22.121",
-    "@aemforms/af-formatters": "0.22.121",
     "@aemforms/af-custom-functions": "1.0.14",
+    "@aemforms/af-formatters": "0.22.121",
     "@babel/eslint-parser": "7.25.9",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/dom": "9.3.4",
+    "@testing-library/user-event": "14.3.0",
+    "@types/node": "20.12.7",
+    "c8": "9.0.0",
+    "chai": "5.1.0",
+    "dom-compare": "0.6.0",
     "eslint": "8.57.1",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.31.0",
@@ -62,30 +69,28 @@
     "jsdom-global": "3.0.2",
     "live-server": "^1.2.2",
     "merge-json-cli": "1.0.4",
-    "npm-run-all": "4.1.5",
-    "nyc": "^15.1.0",
-    "stylelint": "16.12.0",
-    "stylelint-config-standard": "36.0.1",
-    "@testing-library/dom": "9.3.4",
-    "@testing-library/user-event": "14.3.0",
-    "@types/node": "20.12.7",
-    "c8": "9.0.0",
-    "chai": "5.1.0",
-    "dom-compare": "0.6.0",
     "mocha": "10.2.0",
     "mutationobserver-shim": "0.3.7",
     "nock": "13.5.4",
     "node-fetch": "^3.3.2",
+    "npm-run-all": "4.1.5",
+    "nyc": "^15.1.0",
     "parse-multipart-data": "^1.5.0",
-    "sinon": "^17.0.1",
     "rollup": "^2.79.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-license": "^3.0.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^17.0.1",
+    "stylelint": "16.12.0",
+    "stylelint-config-standard": "36.0.1"
   },
   "mocha": {
     "spec": "test/**/*.test.js",
     "require": "test/unit/setup-env.js",
     "recursive": "true"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
