--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Starter project for Adobe Helix",
   "type": "module",
   "scripts": {
+    "webpack": "webpack --config webpack.config.js",
     "lint:js": "eslint . --ext .json,.js,.mjs",
     "lint:css": "stylelint blocks/**/*.css styles/*.css",
     "lint": "npm run lint:js && npm run lint:css",
@@ -53,10 +54,12 @@
     "@babel/cli": "^7.27.2",
     "@babel/core": "^7.27.1",
     "@babel/eslint-parser": "7.25.9",
+    "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@testing-library/dom": "9.3.4",
     "@testing-library/user-event": "14.3.0",
     "@types/node": "20.12.7",
+    "babel-loader": "^10.0.0",
     "c8": "9.0.0",
     "chai": "5.1.0",
     "dom-compare": "0.6.0",
@@ -84,7 +87,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^17.0.1",
     "stylelint": "16.12.0",
-    "stylelint-config-standard": "36.0.1"
+    "stylelint-config-standard": "36.0.1",
+    "webpack": "^5.99.8",
+    "webpack-cli": "^6.0.1"
   },
   "mocha": {
     "spec": "test/**/*.test.js",
