--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "1.3.0",
   "description": "Starter project for Adobe Helix",
-  "type": "module",
   "scripts": {
     "webpack": "webpack --config webpack.config.js",
     "lint:js": "eslint . --ext .json,.js,.mjs",
@@ -81,6 +80,7 @@
     "npm-run-all": "4.1.5",
     "nyc": "^15.1.0",
     "parse-multipart-data": "^1.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "rollup": "^2.79.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-license": "^3.0.1",
