--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.1",
+    "gulp-sourcemaps": "^3.0.0",
     "husky": "9.1.1",
     "jsdom": "24.0.0",
     "jsdom-global": "3.0.2",
