--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "stylelint": "16.12.0",
     "stylelint-config-standard": "36.0.1",
     "webpack": "^5.99.8",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "mocha": {
     "spec": "test/**/*.test.js",
