--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Starter project for Adobe Helix",
   "type": "module",
   "scripts": {
-    "build:css": "gulp scss",
+    "build:css": "npm run gulp build",
     "lint:js": "eslint . --ext .json,.js,.mjs",
     "lint:css": "stylelint blocks/**/*.css styles/*.css",
     "lint": "npm run lint:js",
