chore: testing CSS pipeline built

--- a/.sepaemuipipeline/sepaemui.yml
+++ b/.sepaemuipipeline/sepaemui.yml
@@ -8,7 +8,7 @@ pool:
 
 stages:
   # Sync code with Github
-  - stage: Sync with Github
+  - stage: GithubSync
     jobs:
       - job:
         steps:
