--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "update": "npm run update:core && npm run update:formula && npm run update:formatters",
     "watch:ts": "tsc --watch",
     "gulp": "gulp",
-    "dev": "concurrently --kill-others \"aem up\" \"npm run watch:ts\" \"npm run gulp\""
+    "dev": "concurrently --kill-others \"aem up\" \"npm run watch:ts\" \"npm run gulp\"",
+    "accessibility": "npx axe http://localhost:3000",
+    "snapshot": "curl -s http://localhost:3000 > snapshot.html",
+    "w3c": "html-validate snapshot.html",
+    "validate-html": "npm run snapshot && npm run w3c"
   },
   "c8": {
     "exclude": [
@@ -55,6 +59,7 @@
     "@aemforms/af-core": "0.22.121",
     "@aemforms/af-custom-functions": "1.0.14",
     "@aemforms/af-formatters": "0.22.121",
+    "@axe-core/cli": "^4.9.1",
     "@babel/eslint-parser": "7.25.9",
     "@csstools/postcss-minify": "^2.0.3",
     "@testing-library/dom": "9.3.4",
@@ -76,6 +81,8 @@
     "eslint-plugin-json": "3.1.0",
     "eslint-plugin-xwalk": "github:adobe-rnd/eslint-plugin-xwalk#v0.1.3",
     "fs-extra": "11.2.0",
+    "html-validate": "^9.5.4",
+    "html-validator-cli": "^7.0.1",
     "gulp": "^5.0.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.1",
