--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-xwalk": "github:adobe-rnd/eslint-plugin-xwalk#v0.1.3",
     "fs-extra": "11.2.0",
     "gulp": "^5.0.0",
+    "gulp-header": "^2.0.9",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.1",
     "gulp-sourcemaps": "^3.0.0",
