--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "fs-extra": "11.2.0",
     "gulp": "^5.0.0",
     "gulp-header": "^2.0.9",
+    "gulp-if": "^3.0.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.1",
     "gulp-sourcemaps": "^3.0.0",
