fix: remove semicolon and arrow fn lint rules that are incompatible with Adobe code, and re-enable linting on scripts/and i18n

--- a/.eslintignore
+++ b/.eslintignore
@@ -9,13 +9,8 @@ scripts/editor-support-rte.js
 
 # todo add these back in at some point.
 blocks/**/*.js
-scripts/**/*.js
-i18n/**/*.js
 component-models.json
 
-# include msd scripts
-#!scripts/msd/**
-#
-!scripts/msd/*
+# reinclude some specific blocks
 !blocks/account/*
 !blocks/auth-redirect/*
