--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@aemforms/af-formatters": "0.22.121",
     "@babel/eslint-parser": "7.25.9",
     "@csstools/postcss-minify": "^2.0.3",
+    "@stylistic/eslint-plugin": "^3.0.0",
     "@testing-library/dom": "9.3.4",
     "@testing-library/user-event": "14.3.0",
     "@types/gulp": "^4.0.17",
