--- a/.eslintignore
+++ b/.eslintignore
@@ -8,8 +8,5 @@ scripts/editor-support-rte.js
 /test
 
 # todo add these back in at some point.
-blocks/form/**/*.js
+blocks/form/components/**
 component-models.json
-
-!blocks/form/models/**
-!blocks/form/integrations/**
