--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,5 @@ scripts/editor-support.js
 scripts/editor-support-rte.js
 /test
 
-# todo add these back in at some point.
-blocks/form/components/**
+# TODO add these back in at some point.
 component-models.json
