--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,8 @@
 {
+  "plugins": ["stylelint-scss"],
   "extends": [
     "stylelint-config-standard",
-    "stylelint-config-recommended"
+    "stylelint-config-recommended",
+    "stylelint-config-standard-scss"
   ]
 }
