--- a/package.json
+++ b/package.json
@@ -111,6 +111,8 @@
     "stylelint": "16.12.0",
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-standard": "36.0.1",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-scss": "6.12.1",
     "typescript": "^5.8.3"
   },
   "mocha": {
