--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:ts": "eslint . --ext .ts",
     "lint:js": "eslint . --ext .json,.js,.mjs",
     "lint:css": "stylelint blocks/**/*.css styles/*.css",
+    "lint:scss": "stylelint blocks/**/*.scss styles/*.scss",
     "lint": "npm run lint:js && npm run lint:ts && npm run lint:css",
     "build:json": "npm-run-all -p build:json:models build:json:definitions build:json:filters",
     "build:json:models": "merge-json-cli -i \"models/_component-models.json\" -o \"component-models.json\"",
