--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:css": "npm run gulp buildSASS",
     "build:ts": "npm run gulp buildTS",
     "lint:ts": "eslint . --ext .ts",
-    "lint:js": "eslint . --ext .json,.js,.mjs",
+    "lint:js": "eslint . .husky --ext .json,.js,.mjs,.cjs",
     "lint:css": "stylelint blocks/**/*.css styles/*.css",
     "lint:scss": "stylelint blocks/**/*.scss styles/*.scss",
     "lint": "npm run lint:js && npm run lint:ts && npm run lint:css",
