--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:ts": "npm run gulp buildTS",
     "lint:ts": "eslint . --ext .ts",
     "lint:js": "eslint . .husky --ext .json,.js,.mjs,.cjs",
-    "lint:css": "stylelint blocks/**/*.css styles/*.css",
-    "lint:scss": "stylelint blocks/**/*.scss styles/*.scss",
+    "lint:css": "stylelint \"blocks/**/*.css\" \"styles/**/*.css\"",
+    "lint:scss": "stylelint \"blocks/**/*.scss\" \"styles/*.scss\"",
     "lint": "npm run lint:js && npm run lint:ts && npm run lint:css",
     "build:json": "npm-run-all -p build:json:models build:json:definitions build:json:filters",
     "build:json:models": "merge-json-cli -i \"models/_component-models.json\" -o \"component-models.json\"",
